# homework_fall2023

./: pyproject.toml
hw1/: requirements.txt  run_hw1.py
hw1/cs285/infrastructure/: replay_buffer.py  utils.py
hw1/cs285/policies/: MLP_policy.py  loaded_gaussian_policy.py
hw1/cs285/scripts/: run_hw1.ipynb  run_hw1.py
hw2/cs285/agents/: pg_agent.py
hw2/cs285/scripts/: run_hw2.py
hw3/cs285/agents/: dqn_agent.py  soft_actor_critic.py
hw3/cs285/infrastructure/: utils.py
hw3/cs285/networks/: state_action_value_critic.py
hw3/cs285/scripts/: run_hw3_dqn.py  run_hw3_sac.py
hw4/cs285/agents/: soft_actor_critic.py
hw4/cs285/envs/reacher/: reacher_env.py
hw4/cs285/infrastructure/: replay_buffer.py
hw5/: example_parse_tensorboard.py
hw5/cs285/agents/: awac_agent.py  dqn_agent.py  iql_agent.py  random_agent.py  rnd_agent.py
hw5/cs285/env_configs/: awac_config.py  cql_config.py  dqn_config.py  iql_config.py  rnd_config.py
hw5/cs285/infrastructure/: replay_buffer.py
hw5/cs285/scripts/: run_hw5_explore.py  run_hw5_offline.py
