[tool.poetry]
name = "homework-fall2023"
version = "0.1.0"
description = ""
authors = ["Dylan Feng <dylan@sonnetai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
isort = "^5.13.2"

[tool.poetry-exec-plugin.commands]
reformat = "ruff format && isort . && ruff . --fix"
lint = "isort . --check-only && ruff ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
